--- a/index.html
+++ b/index.html
@@ -3,75 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Review</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Boilerplate</h1>
-        <p> &lt!DOCTYPE&gt tags must be used to indicate HTML version.</p>
-        <p> &lthtml&gt tags indicate the start of the html document. Known as the root.</p>
-            <ul><li><p> "lang=en" attribute indicates language used for html document.</p></li></ul>
-                <p> &lthead&gt tags are used to provide instructions for the boilerplate.</p>
-        <p> &ltmeta charset="UTF-8"&gt sets encoding ensures special symbols and characters from different languages correctly in the browser.</p>
-        <p> &lttitle&gt provides the boilerplate context of the webpage with a title.</p>
-        <p> &ltbody&gt provides html document with content.</p>
-        <p> &lth1&gt provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.</p>
-        
-        <h1>Body elements</h1>
-        <p> Create paragraph tags using &ltp&gt.</p>
-        <p> Use &ltstrong&gt To indicate words of importance, seriousness, and urgency without changing the meaning of the content.</p>
-            <ul><li> Except in emergencies, <strong>do not press the emergency button.</strong></li></ul>
-        <p> Use &ltem&gt in order to emphasize words that change the mean of the content.</p>
-            <ul><li> A person could be tired because <em>he was up all night.</em></li></ul>
-        <p> Use &lti&gt to change the mood or voice of words from surrounding content. Often used with foreign words, idiomatic phrases, technical terms, ship names, thoughts, etc.</p>
-            <ul><li> Even when we do have fun, people are become... <i>over rambunctious.</i></li></ul>
-        <p> Use &ltb&gt to bring attention to words without indicating importance, serious, or urgency.</p>
-            <ul><li> If I have what I wanted, I thought I'd be happy. Now... I want <b>more.</b></li></ul>
-        <p> &lt!-- --&gt creates hidden comments in the line not visible to users.
-            <!-- Like so.-->
-        <p> In order semantics (standards), from most to least important, goes as &ltstrong&gt, &ltem&gt, &lti&gt, and lastly &ltb&gt.</p>
+        <a href="./html/html.html" class="link">HTML</a>
 
-        <h2>Lists</h2>
-        <p> &ltul&gt creates unordered lists. Used for things like getting groceries, when order is not a neccessity.</p>
-            <p>Groceries<p>
-                <ul>
-                    <li>Meat</li>
-                    <li>Veggies</li>
-                    <li>Pasta</li>
-                </ul>
-        <p> &ltol&gt creates ordered. Used for things like directions in a recipe.</p>
-            <p> Recipe
-                <ol>
-                    <li>Preheat oven.</li>
-                    <li>Wash veggies.</li>
-                    <li>Line pan with veggies.</li>
-                    <li>Once oven is preheated, place pan in oven. Bake for 30 minutes.</li>
-                </ol></p>
-        <p> &ltli&gt is used in both ordered and unordered lists to create listed items.</p>
-
-        <h2>Links and Images</h2>
-        <h3>Links</h3>
-        <p>Use &lta&gt, an anchor tag, to create links.
-        <p>There are:</p><ul>
-                <li>Absolute Links</li>
-                <li>Relative Links</li>
-            </ul>
-        <p>Each anchor tag uses an href attribute that designates the image location.</p>
-        <p>To go to YouTube, input "https://www.youtube.com/".</p>
-        <a href="https://www.youtube.com/">YouTube</a>
-        <p>If we want to open in a new tab, add " target="_blank"" after the href attribute.</p>
-        <a href="https://www.youtube.com/" target="_blank">YouTube</a>
-        <p>However, if left as is, this leaves security issues open with JavaScript. For this reason, we add " rel=noopener noreferrer " after the target attribute.</p>
-        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">YouTube</a>
-        <p>"noopener" is a safety protocol. Itensures the newly opened tab that it can not access or interact with the page opened from.</p>
-        <p>"norefferer" provides the benefits of noopener, but also hides information of where the link came from.</p>
-        <p>Without using "noopener", this leads to security issues that are called phishing attacks where the opened link has the possibility of changing the original webpage to something different. This is known as <b>tabnapping</b>.</p>
-        <h3>Images</h3>
-        <p>When bringing in images onto a webpage, use &ltimg&gt tag.</p>
-        <p>&ltimg&gt tags are void elements, so a closing tag is not necessary.</p>
-        <p>However, just like anchor tags, they do have a destination attribute similar to href. For images, src is used.</p>
-        <img src="./images/towelienoidea.jpeg">
-        <p>We must add an alt attribute to describe the image for the visually impaired as well.</p>
-        <img src="./images/towelienoidea.jpeg" alt="Towelie character, subtitled with 'I have no idea what is going on'">
-        <p>Unfortunately the provided image is too large, so we can specify the image size with 'height=' and 'width='.</p>
-        <img src="./images/towelienoidea.jpeg" alt="Towelie character, subtitled with 'I have no idea what is going on'" height="600" width="600">
      </body>                
 </html>
