Modified LAI and Lists

--- a/html/links-and-images/l-a-i.html
+++ b/html/links-and-images/l-a-i.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Links and Images</title>
+    <link rel="stylesheet" href="l-a-i.css">
 </head>
 <body>
-    <h2>Links and Images</h2>
-    <h3>Links</h3>
+    <h1>Links and Images</h1>
+    <h2>Links</h2>
     <p>Use &lta&gt, an anchor tag, to create links.
     <p>There are:</p><ul>
             <li>Absolute Links</li>
@@ -23,7 +24,7 @@
     <p>"noopener" is a safety protocol. Itensures the newly opened tab that it can not access or interact with the page opened from.</p>
     <p>"norefferer" provides the benefits of noopener, but also hides information of where the link came from.</p>
     <p>Without using "noopener", this leads to security issues that are called phishing attacks where the opened link has the possibility of changing the original webpage to something different. This is known as <b>tabnapping</b>.</p>
-    <h3>Images</h3>
+    <h2>Images</h2>
     <p>When bringing in images onto a webpage, use &ltimg&gt tag.</p>
     <p>&ltimg&gt tags are void elements, so a closing tag is not necessary.</p>
     <p>However, just like anchor tags, they do have a destination attribute similar to href. For images, src is used.</p>
