Added CSS pages to HTML file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <a href="./html/html.html" class="link">HTML</a>
+        <br>
+        <a href="./css/css.html" class="link">CSS</a>
 
      </body>                
 </html>
