--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -21,5 +21,65 @@
         <p>Selectors are as implied. They only "select" HTML elements to apply CSS rules to.</p>
         <h4>Universal Selector</h4>
         <p>The universal selector is designated with an asterisk. Usage of the universal selector applies to elements of every type, meaning the entire document.</p>
+        <p>* &#10100
+            <br>
+                color: purple;
+            <br>
+            &#10101
+        </p>
+        <br>
+        <h4>Type Selectors</h4>
+        <p>Type selectors will select all elements of a given element type. The syntax is simply the name of the element.</p>
+        <p>p &#10100
+            <br>
+            color: purple;
+            <br>
+            &#10101
+        </p>
+        <br>
+        <h4>Class Selectors</h4>
+        <p>Class selectors are a way of selecting particular type selectors of a given attribute name. This is done by adding in a class attribute to the HTML element.</p>
+        <p>HTML DOC
+            <br>
+            &ltp class="blue"&gt This is a blue paragraph.
+            <br>
+            &ltp class="blue"&gt This is also a blue paragraph.
+            <br>
+            &ltdiv class="red"&gt This is a red paragraph.</p>
+            <p>CSS
+            <br>
+                .blue &#10100
+                <br>
+                color: blue;
+                <br>
+                &#10101
+        </p>
+        In this scenario, class selectors are designated with a period preceding the class selector.</p>
+        <h4>ID Selectors</h4>
+        <p>ID Selectors are similar to class selectors. They select elements with the given ID, another attribute placed in an HTML element. 
+            The only caveat is each element can only have one ID. It cannot be repeated on a single page and should not have any whitespace.</p>
+        <p> HTML DOC
+            <br>
+            &ltp class="blue"&gt This is a blue paragraph.
+            <br>
+            &ltp class="blue"&gt This is also a blue paragraph.
+            <br>
+            &ltdiv id="red"&gt This is a red div.
+            <br>
+            &ltp class="red"&gt This is a blue paragraph.
+        </p>
+
+        <p>CSS
+                <br>
+                #red &#10100
+                <br>
+                color: red;
+                <br>
+                &#10101
+                <br>
+        </p>
+        <p>In this example, the ID selector is designated with a hashtag preceding the ID selector name.</p>
+
+
     </body>
 </html>
