Added link back to CSS in Intro

--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -250,5 +250,6 @@ p {
             Once you begin to add more declarations, the HTML starts to get messy and difficult to navigate. If you want other elements to have the same declarations,
             then you'll have to write or copy those as well thus making it feel bloated. This method also overrides the other two methods so use it sparringly if never at all.
         </p>
+    <a href="../css.html">Back to CSS</a>
     </body>
 </html>
