--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -24,6 +24,8 @@
                 <li>Once oven is preheated, place pan in oven. Bake for 30 minutes.</li>
             </ol></p>
     <p> &ltli&gt is used in both ordered and unordered lists to create listed items.</p>
+    <a href="../links-and-images/l-a-i.html">Next Lesson: Links and Images</a>
+    <br>
     <a href="../html.html">Back to HTML</a>
 </body>
 </html>
