--- a/html/boilerplate/boilerplate.html
+++ b/html/boilerplate/boilerplate.html
@@ -16,6 +16,8 @@
     <p> &lttitle&gt provides the boilerplate context of the webpage with a title.</p>
     <p> &ltbody&gt provides html document with content.</p>
     <p> &lth1&gt provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.</p>
+    <a href="../body-elements/body-elements.html">Next Lesson: Body Elements</a>
+    <br>
     <a href="../html.html">Back to HTML</a>
 </body>
 </html>
