Added Box Model notes

--- a/css/cascade/cascade.html
+++ b/css/cascade/cascade.html
@@ -238,6 +238,8 @@
             factor could determine which rule was more prioritized or more specific, the element gets applied with 
             a yellow colored font.
         </p>
+        <a href="../box-model/box-model.html">Next Lesson: The Box Model</a>
+        <br>
         <a href="../css.html">Back to CSS</a>
     </body>
 </html>
