--- a/css/css.html
+++ b/css/css.html
@@ -10,6 +10,7 @@
         <ol>
             <li><a href="./intro-to-css/i-t-css.html">Intro to CSS</a></li>
             <li><a href="./cascade/cascade.html">The Cascade</a></li>
+            <li><a href="./box-model/box-model.html">The Box Model</a></li>
         </ol>
         <br>
         <a href="../index.html">Back to Homepage</a>
