Added Dark Mode in CSS on all pages

--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -84,7 +84,7 @@
                 border &#8211 this means the sum of those values are equal to the "width" and "height" values.
             </li>
         </ul>
-        <a href="..">Next Lesson: </a>
+        <a href="../block-and-inline/b-i.html">Next Lesson: Block and Inline</a>
         <br>
         <a href="../css.html">Back to CSS</a>
     </body>
