--- a/css/css.html
+++ b/css/css.html
@@ -11,7 +11,7 @@
             <li><a href="./intro-to-css/i-t-css.html">Intro to CSS</a></li>
             <li><a href="./cascade/cascade.html">The Cascade</a></li>
             <li><a href="./box-model/box-model.html">The Box Model</a></li>
-            <li><a href="./block-and-inline/b-i.html"></a></li>
+            <li><a href="./block-and-inline/b-i.html">Block and Inline</a></li>
         </ol>
         <br>
         <a href="../index.html">Back to Homepage</a>
