Editted CSS declaration for code

--- a/css/block-and-inline/b-i.html
+++ b/css/block-and-inline/b-i.html
@@ -21,7 +21,7 @@
         <h4>Block vs Inline</h4>
         <p>
             Most elements we've used so far are block elements, or another way of saying it is their default style 
-            is set to "<code>display: block"</code>.
+            is set to "<code>display: block</code>".
         </p>
         <br>
         <a href="../">Next Lesson: </a>
