Notes on Block and Inline

--- a/css/block-and-inline/b-i.html
+++ b/css/block-and-inline/b-i.html
@@ -21,9 +21,21 @@
         <h4>Block vs Inline</h4>
         <p>
             Most elements we've used so far are block elements, or another way of saying it is their default style 
-            is set to "<code>display: block</code>".
+            is set to "<code>display: block</code>". By default, all block elements will appear on the page stacked 
+            on top of each other. Every new block element will create a new line.
+        </p>
+        <p>
+            On the contrary, inline elements do not create a new line, but appear in line with the elements they are 
+            placed next to. A good example would be a link (from using the <code>&lta&gt</code> tags) that is part of a 
+            text content. For example:
+        </p>
+        <p>
+           Blah blah blah <a href="https://www.youtube.com/watch?v=dyMXYE_50Ts" target="_blank" rel="noopener noreferrer">blah blah blah</a> blah blah.
         </p>
         <br>
+        <p>
+            As you can see that even though there is a link inside, the line of text is sitting inside as part of the content.
+        </p>
         <a href="../">Next Lesson: </a>
         <br>
         <a href="../css.html">Back to CSS</a>
