Editted 'auto' definition in box model

--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -125,10 +125,10 @@
             </p>
             <h4><code>auto</code> and Centering</h4>
             <p>
-                <code>auto</code> tells the browser to define the margin for you. In most cases, the value of 
-                <code>auto</code> will be the equivalent to a value of 0 (the initial value for each margin property) 
-                or else whatever space is available on that side of the element. However, auto is useful for horizontal 
-                centering:
+                <code>auto</code> tells the browser to define the margin for you, or more specifically to calculate the
+                value based on the remaining space. In most cases, the value of <code>auto</code> will be the equivalent 
+                to a value of 0 (the initial value for each margin property) or else whatever space is available on 
+                that side of the element. However, <code>auto</code> is useful for horizontal centering:
                 <pre><code>
                     .container {
                         width: 980px;
