--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -125,8 +125,8 @@
             </p>
             <h4><code>auto</code> and Centering</h4>
             <p>
-                <code>auto</code> tells the browser to define the margin for you, or more specifically to calculate the
-                value based on the remaining space. In most cases, the value of <code>auto</code> will be the equivalent 
+                <code>auto</code> tells the browser to define the margin for you, or more <em>specifically to calculate the
+                value based on the remaining space</em>. In most cases, the value of <code>auto</code> will be the equivalent 
                 to a value of 0 (the initial value for each margin property) or else whatever space is available on 
                 that side of the element. However, <code>auto</code> is useful for horizontal centering:
                 <pre><code>
@@ -153,10 +153,11 @@
                         centering with auto to work, the element must be inside a parent container with a defined <code>height</code>. 
                         Without that constraint, the browser has no vertical space to divide, so auto margins can’t be calculated.
                         <br>
-                        <br>
+                       <!-- 
                         P.S: It took over two hours trying to understand this. This is how I feel now:
                         <br>
                         <img src="./images/melt.gif" alt="Animated slime melting">
+                        -->
                     </li>
                 </ul>
             </p>
