CSS file cleanup, changed to index, added flexbox
Too cluttered and using too much resources, too
many files to keep track of to style each individual
page.

One general CSS file to look at and easier to handle.
Will use individual CSS if necessary in future.

CSS files removed, only one needed. Deleted extras.

--- a/html/html.html
+++ b/html/html.html
@@ -19,7 +19,6 @@
     </ol>
     <br>
     <br>
-    <a href="../index.html">Back to Review Homepage</a>
-    </ol>
+    <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Review Homepage</a>
 </body>
 </html>
