--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Review</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Review Notes on The Odin Project Course</h1>
         <a href="./html/html.html" class="link">HTML</a>
         <br>
         <a href="./css/css.html" class="link">CSS</a>
-
+        <br>
+        <a href="./flexbox/flexbox.html" class="link">Flexbox</a>
+        <br>
      </body>                
 </html>
