--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./box-model.css">
+        <link rel="stylesheet" href="/styles.css">
         <title>The Box Model</title>
     </head>
     <body>
