--- a/css/css.html
+++ b/css/css.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>CSS</title>
-        <link rel="stylesheet" href="css.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <h1>Notes on CSS</h1>
@@ -14,6 +14,6 @@
             <li><a href="./block-and-inline/b-i.html">Block and Inline</a></li>
         </ol>
         <br>
-        <a href="../index.html">Back to Homepage</a>
+        <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
