--- a/html/html.html
+++ b/html/html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Notes</title>
-    <link rel="stylesheet" href="html.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Notes on HTML</h1>
